fix title test, another try to fix buttons icons alignment for iPhone, readme: add app link opening in a new tab

--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ button {
 	font-size: 48px;
 	color: #000;
 	background-color: var(--green);
-	line-height: .9;
+	line-height: 1.1;
 	border: none;
 	outline: none;
 	/* box-shadow: var(--shadow); */
